--- a/Chat_GEMINI_Imersão_Alura.ipynb
+++ b/Chat_GEMINI_Imersão_Alura.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnzmGezPteh3c2mlpCaNTI",
+      "authorship_tag": "ABX9TyN7stgrLNnQAPhe4HHWlEU1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,23 +47,14 @@
         "\n",
         "# Import the Python SDK\n",
         "import google.generativeai as genai\n",
+        "\n",
         "# Used to securely store your API key\n",
         "from google.colab import userdata\n",
-        "\n",
-        "GOOGLE_API_KEY='AIzaSyCGtgq2BINgiAPzFiJppjN6fmU3Zs2YkUs'\n",
+        "GOOGLE_API_KEY = userdata.get ('chave_api')\n",
         "genai.configure(api_key=GOOGLE_API_KEY)\n",
         "\n",
         "model = genai.GenerativeModel('gemini-pro')"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Fw38GuXN4gV4"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -83,7 +74,7 @@
       "metadata": {
         "id": "vswh1o0f5WSo"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +95,7 @@
       "metadata": {
         "id": "bplkHnRs6mu5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +106,7 @@
       "metadata": {
         "id": "rWZJ8LKl67dv"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
